top part of chatroom.js now has fixed position and adjusted scrollbar

--- a/src/components/Chatroom.css
+++ b/src/components/Chatroom.css
@@ -10,6 +10,13 @@
   /* Contents on mobile */
   section.main-comments {
     height: 100%;
+    overflow: hidden;
+  }
+
+  .main-comments-top {
+    position: fixed;
+    overflow: hidden;
+    z-index: 100;
   }
 
   /* Go back button area on mobile */
@@ -20,12 +27,14 @@
   }
 
   .main-comments-go-back {
+    width: 100vw;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-around;
     padding: 2%;
     position: relative;
+    background: #fff;
   }
 
   .main-comments-go-back .go-back {
@@ -111,8 +120,7 @@
     margin: 0 auto;
     width: 100%;
     height: 100%;
-    overflow-x: hidden;
-    overflow-y: scroll;
+    overflow: hidden;
   }
 
   .messages-loading {
@@ -127,9 +135,18 @@
     align-items: center;
   }
 
+  .comments-scrollable-area {
+    margin-top: 14vh;
+    height: calc(100vh - 18vh);
+    overflow: scroll;
+    overflow-x: hidden;
+  }
+
   .comments-area {
     padding-left: 5%;
     padding-right: 5%;
+    overflow: hidden;
+    overflow-x: hidden;
   }
 
   .comments-area .user-and-comment {
